Update documents for v1.1.0-rc

--- a/docs/examples.adoc
+++ b/docs/examples.adoc
@@ -6,24 +6,9 @@ You can use TransPi either with:
 - individual conda environment per process;
 - docker or singularity
 
-== Local conda
-This way of executing TransPi assumes that you installed conda locally and created the TransPi conda environment.
-All these is done automatically, if desired, with the precheck script.
-
-*Example:*
-[source,bash]
-----
-nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
-    --reads '/YOUR/PATH/HERE/*_R[1,2].fastq.gz' --outdir Results_Acropora \
-    -profile conda --myConda
-----
-
-[NOTE]
-`myConda` tells TransPi that the conda environment to use is the local one. The PATH for this environment is taken
-from the `nextflow.config`, specifically the parameter `myCondaInstall`.
-
-== Individual conda
-You also have the option to run TransPi with individual conda environments for each process. To use this you only specify the profile for conda.
+== Conda
+This way of executing TransPi assumes that you installed conda locally.
+All these is done automatically for you, if desired, with the precheck script.
 
 *Example:*
 [source,bash]
@@ -32,6 +17,9 @@ nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
     --reads '/YOUR/PATH/HERE/*_R[1,2].fastq.gz' --outdir Results_Acropora \
     -profile conda
 ----
+
+[NOTE]
+`-profile conda` tells TransPi to use conda. An individual environment is used per process.
 
 == Containers
 Docker or singularity can also be use for deploying TransPi. You can either use individual containers for each process or a TransPi container with all the tools.
@@ -94,7 +82,7 @@ Kmers:: 25,35,55,75,85
 Reads PATH:: /YOUR/PATH/HERE/*_R[1,2].fastq.gz
 Output directory:: Results_Acropora
 Work directory:: work_acropora
-Engine:: local conda
+Engine:: conda
 Filter species:: on
 host:: scleractinian proteins
 symbiont:: symbiodinium proteins
@@ -104,7 +92,7 @@ symbiont:: symbiodinium proteins
 ----
 nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
     --reads '/YOUR/PATH/HERE/*_R[1,2].fastq.gz' --outdir Results_Acropora \
-    -w work_acropora -profile condas --myConda --filterSpecies \
+    -w work_acropora -profile conda --filterSpecies \
     --host /YOUR/PATH/HERE/uniprot-Scleractinia.fasta \
     --symbiont /YOUR/PATH/HERE/uniprot-symbiodinium.fasta
 ----
@@ -238,7 +226,7 @@ RNAmmer:: on
 ----
 nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
     --reads '/YOUR/PATH/HERE/*_R[1,2].fastq.gz' --outdir Results \
-    -profile conda -myConda --skipQC --withSignalP --withTMHMM --withRnammer
+    -profile conda --skipQC --withSignalP --withTMHMM --withRnammer
 ----
 
 .NOTE
@@ -250,23 +238,6 @@ nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
 - It also assumes that the `PATH` for all the tools are in the `nextflow.config` file.
 
 ****
-
-
-If the `PATH` are not specify in the `nextflow.config` then you can either add them in the file or use the parameters from the command line.
-
-*Example:*
-[source,bash]
-----
-nextflow run TransPi.nf --all --maxReadLen 150 --k 25,35,55,75,85 \
-    --reads '/YOUR/PATH/HERE/*_R[1,2].fastq.gz' --outdir Results \
-    -profile conda --myConda --myCondaInstall "/YOUR/PATH/HERE/TransPi" --skipQC
-    --withSignalP --signalp "/YOUR/PATH/HERE/rnammer"
-    --withTMHMM --tmhmm "/YOUR/PATH/HERE/tmhmm"
-    --withRnammer --rnam "/YOUR/PATH/HERE/signalp"
-----
-
-[NOTE]
-In this example the local conda environment was not specified in the `nextflow.config` but as a command line argument.
 
 
 == Full run and extra annotation
